<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/charcoal"
    tools:openDrawer="start"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_viewer"
        android:src="@drawable/loader"
        android:scrollbars="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/contents"
            android:background="@android:color/transparent"
            android:id="@+id/contents"/>

        <TextView
            android:paddingVertical="5dp"
            android:paddingHorizontal="5dp"
            android:background="#72000000"
            android:textColor="@color/white"
            android:text="@string/tag_placeholder"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:id="@+id/tags"
            android:scrollbars = "vertical"
            android:visibility="gone"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:id="@+id/text_actions"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:background="@color/raisin_black"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:id="@+id/favorite_action"
                android:layout_marginVertical="10dp"
                android:text="@string/add"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:id="@+id/download"
                android:visibility="visible"
                android:layout_marginVertical="10dp"
                android:text="@string/viewsmall"
                android:layout_toEndOf="@+id/favorite_action"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>